<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/filter_material"
        android:textSize="18sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/material"
                    android:text="@string/material_game"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/refinement_material"
                    android:text="@string/refinement_material"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/material_weapon"
                    android:text="@string/material_weapon"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/material_talent"
                    android:text="@string/material_talent"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/material_character"
                    android:text="@string/material_character"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/material_monstadt"
                    android:text="@string/material_monstadt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/material_liyue"
                    android:text="@string/material_liyue"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/material_inazuma"
                    android:text="@string/material_inazuma"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/forging_ore"
                    android:text="@string/forging_ore"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/food"
                    android:text="@string/food"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/material_food"
                    android:text="@string/material_food"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/fish"
                    android:text="@string/fish"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/currency"
                    android:text="@string/currency"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
                <CheckBox
                    android:id="@+id/material_other"
                    android:text="@string/material_other"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/rarity" />

            <CheckBox
                android:id="@+id/check_one_rarity"
                android:text="@string/filter_one_rarity"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:checked="true"
                    android:clickable="false"
                    android:id="@+id/check_rarity_1s"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@drawable/check_star"
                    android:buttonTint="@color/color_tint_check_box_stat" />

                <CheckBox
                    android:checked="true"
                    android:clickable="false"
                    android:id="@+id/check_rarity_2s"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@drawable/check_star"
                    android:buttonTint="@color/color_tint_check_box_stat" />

                <CheckBox
                    android:checked="true"
                    android:clickable="false"
                    android:id="@+id/check_rarity_3s"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@drawable/check_star"
                    android:buttonTint="@color/color_tint_check_box_stat" />

                <CheckBox
                    android:checked="true"
                    android:id="@+id/check_rarity_4s"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@drawable/check_star"
                    android:buttonTint="@color/color_tint_check_box_stat" />

                <CheckBox
                    android:checked="true"
                    android:id="@+id/check_rarity_5s"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@drawable/check_star"
                    android:buttonTint="@color/color_tint_check_box_stat" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_az"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:checked="true"
                    android:text="@string/rarity_augment" />

                <RadioButton
                    android:id="@+id/radio_za"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/rarity_reduce" />
            </RadioGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/bt_reset_dialog"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_select_dialog"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/bt_no_dialog"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_select_dialog"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/bt_yes_dialog"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_select_dialog"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/primary"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>