<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/change_language"
        android:textSize="18sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/choose_lang" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/lang_vi"
                    android:text="@string/vi"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>

                <RadioButton
                    android:id="@+id/lang_en"
                    android:text="@string/en"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
            </RadioGroup>

            <TextView
                android:text="@string/question_restart"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/bt_no_dialog"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_select_dialog"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/bt_yes_dialog"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_select_dialog"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/primary"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>