<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:cardUseCompatPadding="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/choose_character" />

                <ProgressBar
                    android:layout_gravity="center_vertical"
                    android:id="@+id/progress_character_contribute"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </LinearLayout>

            <Spinner
                android:gravity="center"
                android:id="@+id/spinner_character_contribute"
                android:layout_width="match_parent"
                android:layout_height="40dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stoke"
                android:background="@color/color_stoke" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/choose_weapon" />

                <ProgressBar
                    android:layout_gravity="center_vertical"
                    android:id="@+id/progress_weapon_contribute"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </LinearLayout>

            <Spinner
                android:gravity="center"
                android:id="@+id/spinner_weapon_contribute"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stoke"
                android:background="@color/color_stoke" />

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/choose_set_artifact" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp">

                <RadioButton
                    android:id="@+id/radio_set2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:checked="true"
                    android:text="@string/set2_artifact" />

                <RadioButton
                    android:id="@+id/radio_set4"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/set4_artifact" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stoke"
                android:background="@color/color_stoke" />

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/choose_artifact" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/text_set_artifact1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/set2_artifact_first" />

            <Spinner
                android:id="@+id/spinner_set_artifact1"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/text_set_artifact2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/set2_artifact_second" />

            <Spinner
                android:id="@+id/spinner_set_artifact2"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <View
                android:layout_marginBottom="5dp"
                android:background="@color/color_stoke"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stoke"/>

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/mainstat_sand" />

            <Spinner
                android:layout_marginStart="20dp"
                android:id="@+id/spinner_sand_contribute"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <View
                android:layout_marginBottom="5dp"
                android:background="@color/color_stoke"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stoke"/>

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/mainstat_goblet" />

            <Spinner
                android:layout_marginStart="20dp"
                android:id="@+id/spinner_goblet_contribute"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <View
                android:layout_marginBottom="5dp"
                android:background="@color/color_stoke"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stoke"/>

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/mainstat_circlet" />

            <Spinner
                android:layout_marginStart="20dp"
                android:id="@+id/spinner_circlet_contribute"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <View
                android:layout_marginBottom="5dp"
                android:background="@color/color_stoke"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stoke"/>

            <TextView
                android:textStyle="italic"
                android:text="@string/note_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:hint="@string/des_artifact_contribute">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description_artifact"
                    android:clickable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_contribute_artifact"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/title_contribute"
                android:textAllCaps="false" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>